Adjusted CSS to solve alignment issues in mobile

--- a/recipes/page_style.css
+++ b/recipes/page_style.css
@@ -47,10 +47,6 @@ header{
     
 }
 
-header .image{
-    width: 450px;
-    height: auto;
-}
 
 h2{
     color: rgba(65, 13, 6, 0.781);
